[travel] post_list 템플릿에 링크 추가

--- a/django_proj1/travel/templates/travel/post_list.html
+++ b/django_proj1/travel/templates/travel/post_list.html
@@ -2,6 +2,7 @@
     {% for post in post_list %}
     <li>
         {{ post.message }}
+        <a href="/travel/{{ post.pk }}/">자세히 보기</a>
     </li>
     {% endfor %}
 </ul>
