[travel] post_list/post_detail 템플릿에 같은 레이아웃 적용

--- a/django_proj1/travel/templates/travel/post_detail.html
+++ b/django_proj1/travel/templates/travel/post_detail.html
@@ -1,6 +1,24 @@
-{{ post.message }}
+<!doctype html>
+<html>
 
-<hr />
+<head>
+    <title></title>
+    <style>
+        body {
+            background-color: lightyellow;
+        }
+    </style>
+</head>
 
-{{ post.latitude }},
-{{ post.longitude }}
+<body>
+
+    {{ post.message }}
+
+    <hr />
+
+    {{ post.latitude }},
+    {{ post.longitude }}
+
+</body>
+
+</html>
