[travel] post_list/post_detail 템플릿의 부모로서 layout 템플릿 구성

--- a/django_proj1/travel/templates/travel/post_detail.html
+++ b/django_proj1/travel/templates/travel/post_detail.html
@@ -1,24 +1,10 @@
-<!doctype html>
-<html>
+{% extends "travel/layout.html" %}
 
-<head>
-    <title></title>
-    <style>
-        body {
-            background-color: lightyellow;
-        }
-    </style>
-</head>
+{% block content %}
+{{ post.message }}
 
-<body>
+<hr />
 
-    {{ post.message }}
-
-    <hr />
-
-    {{ post.latitude }},
-    {{ post.longitude }}
-
-</body>
-
-</html>
+{{ post.latitude }},
+{{ post.longitude }}
+{% endblock %}
