--- a/django_proj1/travel/templates/travel/post_list.html
+++ b/django_proj1/travel/templates/travel/post_list.html
@@ -1,26 +1,12 @@
-<!doctype html>
-<html>
+{% extends "travel/layout.html" %}
 
-<head>
-    <title></title>
-    <style>
-        body {
-            background-color: lightyellow;
-        }
-    </style>
-</head>
-
-<body>
-
-    <ul>
-        {% for post in post_list %}
-        <li>
-            {{ post.message }}
-            <a href="/travel/{{ post.pk }}/">자세히 보기</a>
-        </li>
-        {% endfor %}
-    </ul>
-
-</body>
-
-</html>
+{% block content %}
+<ul>
+    {% for post in post_list %}
+    <li>
+        {{ post.message }}
+        <a href="/travel/{{ post.pk }}/">자세히 보기</a>
+    </li>
+    {% endfor %}
+</ul>
+{% endblock %}
