--- a/django_proj2/journal/templates/journal/post_list.html
+++ b/django_proj2/journal/templates/journal/post_list.html
@@ -1,15 +1,17 @@
 {% extends 'journal/layout.html' %}
 
 {% block content %}
-    <ul>
+<ul>
     {% for post in post_list %}
-        <li>
-            <img src="{{ post.photo.url }}" style="width: 100px;" />
-            <a href="/journal/{{ post.pk }}/">
-                {{ post.title }}
-            </a>
-            {{ post.journallist.name }}
-        </li>
+    <li>
+        <img src="{{ post.photo.url }}" style="width: 100px;" />
+        <a href="/journal/{{ post.pk }}/">
+            {{ post.title }}
+        </a>
+        {{ post.journallist.name }}
+    </li>
     {% endfor %}
-    </ul>
+</ul>
+<hr />
+<a href="/journal/new/">Post New</a>
 {% endblock %}
