comment_delete 뷰 구현

--- a/django_proj2/journal/templates/journal/post_detail.html
+++ b/django_proj2/journal/templates/journal/post_detail.html
@@ -20,6 +20,7 @@ at {{ post.created_at }}
         {{ comment.message }}
         at {{ comment.created_at }}
         <a href="/journal/{{ post.pk }}/comments/{{ comment.pk }}/edit/">Edit</a>
+        <a href="/journal/{{ post.pk }}/comments/{{ comment.pk }}/delete/">Delete</a>
     </li>
     {% endfor %}
 </ul>
