review_form 템플릿에 bootstrap_form 템플릿 태그를 적용

--- a/django_proj_movie/movist/templates/movist/review_form.html
+++ b/django_proj_movie/movist/templates/movist/review_form.html
@@ -1,13 +1,19 @@
 {% extends "movist/layout.html" %}
+{% load bootstrap5 %}
 
 {% block content %}
 
-<form action="" method="POST" enctype="multipart/form-data">
+<form action="" method="POST" enctype="multipart/form-data" novalidate>
     {% csrf_token %}
-    <table>
+    {% comment %} <table>
         {{ form.as_table }}
-    </table>
-    <input type="submit" />
+    </table> {% endcomment %}
+
+    {% bootstrap_form form %}
+
+    <input type="submit" class="btn btn-primary" />
+    <input type="submit" class="btn btn-secondary" />
+    <input type="submit" class="btn btn-danger" />
 </form>
 
 {% endblock %}
