--- a/django_proj_movie/django_proj_movie/templates/base.html
+++ b/django_proj_movie/django_proj_movie/templates/base.html
@@ -34,30 +34,32 @@
 </head>
 
 <body>
-    <h1 class="page-title">
-        <a href="{% url "root" %}">Movist</a>
-    </h1>
+    <div class="container">
+        <h1 class="page-title">
+            <a href="{% url "root" %}">Movist</a>
+        </h1>
 
-    <ul id="top-nav">
-        {% if not user.is_authenticated %}
-        <li><a href="{% url "signup" %}">회원가입</a></li>
-        <li><a href="{% url "login" %}">로그인</a></li>
-        {% else %}
-        <li>
-            <a href="{% url "profile" %}">
-                {{ user.username }}'s
-                프로필
-            </a>
-        </li>
-        <li><a href="{% url "logout" %}">로그아웃</a></li>
-        {% endif %}
-    </ul>
+        <ul id="top-nav">
+            {% if not user.is_authenticated %}
+            <li><a href="{% url "signup" %}">회원가입</a></li>
+            <li><a href="{% url "login" %}">로그인</a></li>
+            {% else %}
+            <li>
+                <a href="{% url "profile" %}">
+                    {{ user.username }}'s
+                    프로필
+                </a>
+            </li>
+            <li><a href="{% url "logout" %}">로그아웃</a></li>
+            {% endif %}
+        </ul>
 
-    {% block content %}
-    {% endblock %}
+        {% block content %}
+        {% endblock %}
 
-    <hr />
-    &copy; 2021 이진석 컴퍼니.
+        <hr />
+        &copy; 2021 이진석 컴퍼니.
+    </div>
 </body>
 
 </html>
