movie_list에 bootstrap card 레이아웃 적용

--- a/django_proj_movie/django_proj_movie/templates/base.html
+++ b/django_proj_movie/django_proj_movie/templates/base.html
@@ -21,6 +21,12 @@
             color: #ff4552;
         }
 
+        @media (max-width: 768px) {
+            .page-title a {
+                color: blue;
+            }
+        }
+
         #top-nav {
             display: flex;
         }
