actor_list에 prefetch_related 적용

--- a/django_proj_movie/movist/templates/movist/actor_list.html
+++ b/django_proj_movie/movist/templates/movist/actor_list.html
@@ -9,6 +9,8 @@
             {{ actor.name }}
         </a>
         <img src="{{ actor.photo.url }}" style="width: 100px;" />
+
+        {{ actor.movie_set.all }}
     </li>
     {% endfor %}
 </ul>
